# ollama_travel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: sources.example.json  sources.json
scripts/: docker-scan.sh
src/travel_deals_agent/: cli.py  collectors.py  llm.py  models.py  notifiers.py  scoring.py  settings.py  sources.py  storage.py
tests/: test_collectors.py  test_notifiers.py  test_scoring.py
