[project]
name = "travel-deals-agent"
version = "0.1.0"
description = "Local travel deal scout powered by Ollama Cloud"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.8",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "ollama>=0.5.1",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.7.1",
  "python-dotenv>=1.0.1",
  "rich>=13.9.4",
]

[project.scripts]
travel-deals = "travel_deals_agent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_deals_agent"]
